tests/golden/snapshots/render_scaffolders_matrix__event_profile_updated_casing.snap
---
source: tests/golden/render_scaffolders_matrix.rs
expression: value
---
#[event]
pub struct ProfileUpdated {
    pub display_name: String,
    pub active: bool,
}
