tests/golden/snapshots/render_scaffolders_matrix__event_vote_cast.snap
---
source: tests/golden/render_scaffolders_matrix.rs
expression: value
---
#[event]
pub struct VoteCast {
    pub proposal: Pubkey,
    pub voter: Pubkey,
    pub choice: u8,
}
