tests/golden/snapshots/render_scaffolders_matrix__instruction_close_vault.snap
---
source: tests/golden/render_scaffolders_matrix.rs
expression: value
---
// === sunscreen:auto-generated:begin segment=file version=1 generator=instruction ===
use anchor_lang::prelude::*;
use crate::events::Closed;

#[derive(Accounts)]
pub struct CloseVault<'info> {
    pub authority: Signer<'info>,
    #[account(mut, seeds = [b"vault", authority.key().as_ref()], bump)]
    pub vault: AccountInfo<'info>,
}
// === sunscreen:auto-generated:end segment=file ===

// === sunscreen:user-region:begin segment=handler ===
pub fn handler(
    ctx: Context<CloseVault>,
) -> Result<()> {
    let _ = ctx;
    emit!(Closed {
        reason: todo!("set Closed.reason"),
    });
    Ok(())
}
// === sunscreen:user-region:end segment=handler ===
